--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <button id="findBtn"> تحديد أقرب دار 🔍</button>
     <div id="result" class="result"></div>
+    <div id="nearestBranch" class="nearest-branch"></div>
+    <div id="branchesList" class="branches-list"></div>
+    <footer>
+      <p>سبحان الله وبحمده، سبحان الله العظيم</p>
+    </footer>
   </div>
 
   <script src="script.js"></script>
